@@ -83,6 +83,11 @@ Version 8.00 ??-???-??
     libpcrecpp.pc and pcre-config when PCRE is not compiled as a shared
     library.
     
+15. Added REG_UNGREEDY to the pcreposix interface, at the request of a user.
+    It maps to PCRE_UNGREEDY. It is not, of course, POSIX-compatible, but it
+    is not the first non-POSIX option to be added. Clearly some people find 
+    these options useful.  
+    
 
 Version 7.9 11-Apr-09
 ---------------------
